k8s/svc-cl-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-cl-ip
  labels:
    app: test-app
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
