k8s/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test-app
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
